# kafcars

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
kafcars/: Cargo.toml
kafcars-inner-macros/: Cargo.toml
kafcars-inner-macros/src/: common.rs  kafka_request.rs  lib.rs  versioned_deserialize.rs  versioned_serialize.rs
kafcars/src/: error.rs  lib.rs
kafcars/src/client/: broker.rs  mod.rs  stream.rs
kafcars/src/protocol/: api_key.rs  deserializer.rs  error.rs  mod.rs  serializer.rs
kafcars/src/protocol/messages/: header.rs  metadata.rs  mod.rs  version.rs
kafcars/tests/: client.rs  consumer.rs  java_helper.rs  produce_consume.rs  producer.rs  rdkafka_helper.rs  test_helpers.rs
