[package]
name = "kafcars"
version = "0.1.0"
edition = "2021"

[dependencies]
kafcars-inner-macros = { path = "../kafcars-inner-macros" }

tokio = { version = "1.40.0", features = ["net", "sync", "rt", "io-util"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
snafu = { version = "0.8.5", features = ["backtrace", "futures"] }
rand = "0.8.5"
serde_json = "1.0.132"
log = "0.4.22"
chrono = "0.4.38"
parking_lot = "0.12.3"
tracing = "0.1.40"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.5.0"
proptest-derive = "0.5.0"
rdkafka = { version = "0.36.2", default-features = false, features = ["libz", "tokio", "zstd"] }
dotenvy = "0.15.7"
uuid = { version = "1.11.0", features = ["v4"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
j4rs = "0.20.0"
